# labsignal-slack-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEMO.md  DEMO_PLAYBOOK.md  SUBMISSION.md  slack-app-manifest.yaml
src/labsignal/: __init__.py  agent.py  blocks.py  brain.py  brain_grok.py  cli.py  config.py  knowledge.py  mcp_client.py  mcp_server.py  slack_app.py  slack_read.py  tools.py
tests/: test_agent.py  test_mcp.py
