[project]
name = "labsignal"
version = "0.1.0"
description = "Slack research operations agent with MCP-compatible tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vitalie Cervinschi" }]
dependencies = [
    "slack-bolt>=1.21",
    "slack-sdk>=3.30",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["labsignal"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

