[project]
name = "labsignal"
version = "0.1.0"
description = "Slack research-ops agent: Claude reasoning over an MCP tool server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vitalie Cervinschi" }]
dependencies = [
    "slack-bolt>=1.21",
    "slack-sdk>=3.30",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "mcp>=1.2",
    "anthropic[mcp]>=0.116",
    "openai>=1.60",           # xAI is OpenAI-wire-compatible; used for the Grok path
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["labsignal"]

[project.scripts]
labsignal = "labsignal.cli:main"
labsignal-slack = "labsignal.slack_app:main"

[tool.pytest.ini_options]
# Works from a source checkout without setting PYTHONPATH.
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

